# paelectionresults

./: docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
helm/: Chart.yaml  values.yaml
helm/templates/: cert.yaml  frontend.yaml  ingest-philly.yaml  ingest.yaml  ingress-frontend.yaml  ingress-pubsub.yaml  pubsub.yaml
pavote-app/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
pavote-app/src/lib/: livedata.ts
pavote-app/src/routes/: +page.svelte  PaCounties2024Simplified.geojson.json  countyMap.svelte  countyPlot.svelte  philly.geojson.json  phillyMap.svelte  phillyPlot.svelte  summary.svelte
pavote-backend/: Dockerfile  README.md  pyproject.toml
pavote-backend/src/pavote_backend/: 2020.json  __init__.py  downloader.py  downloader_philly.py  main.py  processor.py
