[project]
name = "pavote-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sharp Hall", email = "sharp@sharphall.org" }
]
dependencies = [
    "fastapi[standard]>=0.115.4",
    "aiopubsub>=3.0.0",
    "websockets>=13.1",
    "aioredis>=2.0.1",
    "setuptools>=75.3.0",
    "redis>=5.2.0",
    "requests>=2.32.3",
    "pytz>=2024.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pavote_backend"]
